Spark upgrade (I7).